# gwf

./: .btd  .codacy.yaml  .coveragerc  .flake8  .gitattributes  .gitignore  .travis.yml  CHANGELOG.rst  CONTRIBUTORS.rst  LICENCE  LICENSE  MANIFEST.in  Makefile  Pipfile  README  README.rst  TODO  Vagrantfile  build_conda.sh  clean-workspace  deploy_anaconda.sh  deploy_conda.sh  experiments.py  explicit.py  extract-changelog.py  ez_setup.py  noxfile.py  port-job-status.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  template-test.py  test.py  test2.py  test3.py
.github/: FUNDING.yml
.github/workflows/: deploy-docs.yml  release.yml  test.yml
ci/: slurm.conf
conda/: deploy_conda.sh  meta.yaml
docs/: .codacy.yaml  Makefile  advancedtutorial.rst  api.rst  backends.rst  best_practices.rst  conf.py  configuration.rst  contributing.rst  executors.rst  forcontributors.rst  formaintainers.rst  index.rst  make.bat  patterns.rst  plugins.rst  reference.rst  requirements.txt  tutorial.rst  upgrading_from_pre_1.0.rst  writingbackends.rst  writingplugins.rst
docs/development/: forcontributors.rst  formaintainers.rst  index.rst  writingbackends.rst
docs/guide/: configuration.rst  index.rst  installation.rst  mapping.rst  patterns.rst  plugins.rst  tutorial.rst
docs/reference/: api.rst  backends.rst  index.rst  settings.rst
docs/topic-guides/: configuration.rst  index.rst  large_workflows.rst  templates.rst
docs/tutorial/: index.rst
editor-support/TextWrangler/: GWF.plist
editor-support/vscode/: README.rst  snippets.json
example/: test.py  test2.py  test3.py  workflow.gwf  workflow.py
examples/minimal-workflow/: greeting.txt  workflow.py
examples/minimal-workflow-explicit-options/: workflow.py
examples/named-inputs-outputs/: workflow.py
examples/readmapping/: environment.yml  ponAbe2.ann  ponAbe2.fa  ponAbe2.pac  workflow.py
examples/readmapping-and-merging/: ponAbe2.amb  workflow.py
examples/readmapping-and-merging/.scripts/: IndexGenome
examples/readmapping/.scripts/: MapReads  SortBAM  UnZipGenome
examples/simple-workflow/: workflow.py
examples/using-map/: templates.py  workflow.py
examples/using-map/data/: sample0  sample1  sample2
examples/using-map/scripts/: compute_avg.awk  compute_stats.py  sum_ts.awk
examples/workflow-include/: workflow.py
examples/workflow-include/other_workflow/: workflow.py
gwf/: __init__.py  _version.py  api.py  backends.py  cli.py  colours.py  compat.py  conf.py  config.py  configurations.py  core.py  dependency_graph.py  events.py  exceptions.py  ext.py  filtering.py  graphviz.py  helpers.py  jobs.py  parser.py  scheduler.py  utils.py  workflow.py  workflow_preprocessor.py
gwf/backends/: __init__.py  base.py  exceptions.py  ipyparallel.py  local.py  logmanager.py  slurm.py  testing.py  torque.py
gwf/backends/local/: __init__.py  backend.py  client.py  server.py
gwf/cli/: __main__.py  arg_parsing.py  entrypoint.py  parsing.py  status.py
gwf/commands/: run.py  status.py
gwf/extra/: __init__.py
gwf/plugins/: __init__.py  base.py  cancel.py  clean.py  config.py  info.py  logs.py  run.py  status.py  workers.py
scripts/: gwf  gwf-config  gwf-print-lists  gwf-print-preprocessed  gwf-print-schedule  gwf-print-targets  gwf-workflow-graph  mk_gwf  mk_gwf-config
src/gwf/: __init__.py  bwa.py  cli.py  compat.py  conf.py  core.py  exceptions.py  executors.py  filtering.py  log_storage.py  path.py  pathlib.py  samtools.py  scheduling.py  temp.py  utils.py  workflow.py
src/gwf/backends/: __init__.py  base.py  exceptions.py  local.py  logmanager.py  lsf.py  pbs.py  sge.py  slurm.py  testing.py  utils.py
src/gwf/exec/: __main__.py
src/gwf/plugins/: cancel.py  clean.py  config.py  info.py  init.py  logs.py  run.py  status.py  touch.py  workers.py
src/gwf_exec/: __main__.py
src/gwf_workflow/: ._performance.py  __init__.py  backends.py  colours.py  configurations.py  helpers.py  jobs.py  performance.py  workflow.py
src/mk_gwf/: __init__.py  bwa.py  samtools.py
src/mk_gwf_workflow/: jobs.py  performance.py  workflow.py
tests/: __init__.py  comments.gwf  conftest.py  example.gwf  execute_target.py  globs.gwf  graph.gwf  input-output-lists.gwf  lists.gwf  print_dependecies.py  print_local_execution_script.py  print_submission_script.py  shell.gwf  simple_pipe.gwf  system_files.gwf  templates.gwf  test_backend_base.py  test_backend_slurm.py  test_clean.py  test_cli.py  test_comments.py  test_conf.py  test_config.py  test_core.py  test_dependency_graph.py  test_events.py  test_ext.py  test_filtering.py  test_globs.py  test_input_output_lists.py  test_lists.py  test_scheduler.py  test_shell.py  test_templates.py  test_timestamps.py  test_transform.py  test_utils.py  test_workflow.py  timestamps.gwf  transform.gwf
tests/backends/: test_base.py  test_local.py  test_logmanager.py  test_slurm.py
tests/plugins/: conftest.py  test_base.py  test_cancel.py  test_clean.py  test_config.py  test_info.py  test_logs.py  test_run.py  test_status.py  test_touch.py
