[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [{ name = "Dan Søndergaard", email = "das@genome.au.dk" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: System :: Distributed Computing",
    "Topic :: Utilities",
]
dynamic = ["version", "description"]
name = "gwf"
readme = "README.rst"
requires-python = ">=3.10"

[project.scripts]
gwf = "gwf.cli:main"

[project.entry-points."gwf.plugins"]
cancel = "gwf.plugins.cancel:cancel"
clean = "gwf.plugins.clean:clean"
config = "gwf.plugins.config:config"
info = "gwf.plugins.info:info"
logs = "gwf.plugins.logs:logs"
run = "gwf.plugins.run:run"
status = "gwf.plugins.status:status"
touch = "gwf.plugins.touch:touch"
workers = "gwf.plugins.workers:workers"

[project.entry-points."gwf.backends"]
local = "gwf.backends.local:setup"
sge = "gwf.backends.sge:setup"
slurm = "gwf.backends.slurm:setup"
lsf = "gwf.backends.lsf:setup"
pbs = "gwf.backends.pbs:setup"

[project.urls]
Home = "https://gwf.app"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.dependencies]
click = ">=8.3.1,<9"
click-plugins = ">=1.1.1.2,<2"
attrs = ">=26.1.0,<27"
prettyprinter = ">=0.18.0,<0.19"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev", "test"], solve-group = "default" }
test-py310 = ["py310", "test"]
test-py311 = ["py311", "test"]
test-py312 = ["py312", "test"]
test-py313 = ["py313", "test"]
test-py314 = ["py314", "test"]

[tool.pixi.feature.dev.dependencies]
ruff = ">=0.15.8,<0.16"
sphinx = ">=9.1.0,<10"
sphinx-autobuild = ">=2025.8.25,<2026"
furo = ">=2025.12.19,<2026"
flit = ">=3.11.0,<4"
anaconda-client = ">=1.14.1,<2"
conda-build = ">=26.1.0,<27"

[tool.pixi.feature.dev.pypi-dependencies]
gwf = { path = ".", editable = true }

[tool.pixi.feature.dev.tasks]
format = "ruff format $PIXI_PROJECT_ROOT/src"
lint = "ruff check $PIXI_PROJECT_ROOT/src"
clean = "clean-workspace"

build = { cmd = "conda build .", cwd = "conda/" }
publish = { cmd = "anaconda --token ${ANACONDA_TOKEN_GWFORG} upload -u gwforg $(conda-build --output .)", cwd = "conda/" }
build-docs = { cmd = "sphinx-build -b dirhtml . _build/dirhtml", cwd = "docs/" }
preview-docs = { cmd = "sphinx-autobuild --open-browser -b dirhtml . _build/dirhtml", cwd = "docs/" }

[tool.pixi.feature.test.dependencies]
pytest = ">=9.0.2,<10"
pytest-click = ">=1.1.0,<2"
pytest-mock = ">=3.15.1,<4"
pytest-runner = ">=6.0.0,<7"
pytest-asyncio = ">=1.3.0,<2"

[tool.pixi.feature.test.pypi-dependencies]
gwf = { path = ".", editable = true }

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
[tool.pixi.feature.py313.dependencies]
python = "3.13.*"
[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.feature.test.tasks]
test = "pytest tests/"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
